// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelectableMessage bordered is rendered 1`] = `
<div
  class="euiText euiSelectableMessage euiSelectableMessage--bordered css-3vmilf-euiText-xs"
>
  <div
    class="css-xv0fhq-euiTextColor-subdued"
  />
</div>
`;

exports[`EuiSelectableMessage is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiText euiSelectableMessage testClass1 testClass2 css-3vmilf-euiText-xs"
  data-test-subj="test subject string"
>
  <div
    class="css-xv0fhq-euiTextColor-subdued"
  />
</div>
`;
